Complete header portion in HTML and create img folder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     </head>
 
     <body>
-        
+        <div class="header">
+            <div id="banner" >
+                <img src="./images/header.png">
+            </div>
+
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="#">OPPORTUNITIES</a></li>
+                    <li><a href="#">RESEARCH</a></li>
+                    <li><a href="#">TECHNOLOGY</a></li>
+                    <li><a href="#">FUTURE</a></li>
+                </ul>
+            </nav>
+        </div>
     </body>
 </html>
