Stylize Header portion WIP

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="header">
             <div id="banner" >
-                <img src="./images/header.png">
+                <img src="./images/header.png" alt="USF Banner">
             </div>
 
             <nav class="navbar">
